discussion/kv_engine/150013/150013_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45221: Use FlushAccounting during replay 'copy'

Three aims of this commit:

1) Re-use the FlushAccounting code for tracking collection
disk size during compaction catch-up. This means there is
one place where we can see the logic for size/item tracking.

2) Remove the preload of *all* collections by utilising
local document copying in the replay.

3) Remove code which detected drop collections in the copy,
the FlushAccounting object does this when it is given the
dropped collections of the replay chunk.

Change-Id: Ic96f3e4c564277ea3b3d602310924b6ba950c35f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-03-30 16:40:24.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-30 18:11:31.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29732/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
fatal error: "charconv" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29732/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34651/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(210): error C2665: "std::from_chars": none of the 14 overloads could convert all the argument types ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34651/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8005/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10: error: "charconv" file not found [clang-diagnostic-error]
#include <charconv>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8005/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
error: "charconv" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8005/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9951/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17499/ : FAILURE

Compile error at [2021-03-30T18:10:21.857Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
fatal error: "charconv" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17499/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9590/ : FAILURE

Compile error at [2021-03-30T17:50:37.032Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
fatal error: charconv: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9590/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9726/ : FAILURE

Compile error at [2021-03-30T18:01:48.927Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
fatal error: charconv: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9726/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6549/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8655/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
